# lyrics-overlay

./: .gitignore  README.md  build_app.sh  pyproject.toml  requirements.txt  run.py  setup.py
lyrics_overlay/: control_panel.py  full_lyrics_window.py  lrc_parser.py  lyrics_fetcher.py  main.py  menu_bar_hider.py  menu_bar_overlay.py  music_watcher.py  overlay.py  player.py  sync_engine.py  ytmusic_watcher.py
